# myhelloworldpypipackage

./: .gitignore  README.md  pyproject.toml
syengohelloworldpackage/: __init__.py
tests/: test_syengohelloworldpackage.py
